# anchor-zeta

./: Anchor.toml  README.md  TEST_SUMMARY.md  WALLET_SETUP.md  access_token  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.test.json
app/: README.md  globals.css  index.tsx  main.tsx
app/components/: SolanaProvider.tsx  WalletConnect.tsx
app/hooks/: useProgram.ts
app/idl/: universal_nft.json  universal_nft.ts
app/lib/: program.ts  utils.ts
nft/: hardhat.config.ts
programs/universal-nft/: Cargo.toml
programs/universal-nft/src/: lib.rs  universal_nft.rs  universal_nft_core.rs
scripts/: run-tests.sh
tests/: universal-nft.ts
