[package]
name = "universal-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
mpl-token-metadata = "5.1.0"

[patch.crates-io]
solana-program = "=2.3.0"
solana-zk-sdk = "=2.3.0"
solana-zk-token-sdk = "=2.3.0"

